refactor: refactor methods