@@ -1,18 +1,17 @@
 package org.example.gymcrm.dao;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.*;
 import static org.mockito.Mockito.*;
-
-import java.util.*;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.NoResultException;
 import jakarta.persistence.TypedQuery;
+import java.util.List;
+import java.util.Optional;
+
 import org.example.gymcrm.dao.impl.TrainerDaoImpl;
 import org.example.gymcrm.entity.Trainer;
 import org.example.gymcrm.entity.User;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -20,29 +19,31 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-public class TrainerDaoTest {
+class TrainerDaoTest {
 
-    @Mock
-    private EntityManager entityManager;
+    @Mock private EntityManager entityManager;
+    @Mock private TypedQuery<String> usernameQuery;
+    @Mock private TypedQuery<Trainer> trainerQuery;
 
-    @InjectMocks
-    private TrainerDaoImpl trainerDao;
+    @InjectMocks private TrainerDaoImpl trainerDao;
 
-    private Trainer trainer;
-    private User user;
+    private Trainer createTrainer(String username) {
+        User user = new User();
+        user.setUsername(username);
+        user.setPassword("password123");
+        user.setFirstName("Jane");
+        user.setLastName("Doe");
+        user.setActive(true);
 
-    @BeforeEach
-    void setUp() {
-        user = new User();
-        user.setUsername("testUser");
-
-        trainer = new Trainer();
-        trainer.setId(1L);
+        Trainer trainer = new Trainer();
         trainer.setUser(user);
+        return trainer;
     }
 
     @Test
     void testSave() {
+        Trainer trainer = createTrainer("trainer1");
+
         trainerDao.save(trainer);
 
         verify(entityManager, times(1)).persist(trainer);
@@ -50,63 +51,62 @@ public class TrainerDaoTest {
 
     @Test
     void testFindUsernames() {
-        TypedQuery<String> query = mock(TypedQuery.class);
-        when(entityManager.createQuery(anyString(), eq(String.class))).thenReturn(query);
-        when(query.getResultList()).thenReturn(Arrays.asList("testUser1", "testUser2"));
+        when(entityManager.createQuery(anyString(), eq(String.class))).thenReturn(usernameQuery);
+        when(usernameQuery.getResultList()).thenReturn(List.of("trainer1", "trainer2"));
 
         List<String> usernames = trainerDao.findUsernames();
 
-        assertEquals(2, usernames.size());
-        assertTrue(usernames.contains("testUser1"));
-        assertTrue(usernames.contains("testUser2"));
+        assertThat(usernames).containsExactly("trainer1", "trainer2");
+        verify(entityManager, times(1)).createQuery(anyString(), eq(String.class));
+        verify(usernameQuery, times(1)).getResultList();
     }
 
     @Test
-    void testFindByUsername() {
-        TypedQuery<Trainer> query = mock(TypedQuery.class);
-        when(entityManager.createQuery(anyString(), eq(Trainer.class))).thenReturn(query);
-        when(query.setParameter(anyString(), any())).thenReturn(query);
-        when(query.getSingleResult()).thenReturn(trainer);
+    void testFindByUsername_Found() {
+        Trainer trainer = createTrainer("trainer1");
+        when(entityManager.createQuery(anyString(), eq(Trainer.class))).thenReturn(trainerQuery);
+        when(trainerQuery.setParameter("username", "trainer1")).thenReturn(trainerQuery);
+        when(trainerQuery.getSingleResult()).thenReturn(trainer);
 
-        Optional<Trainer> result = trainerDao.findByUsername("testUser");
+        Optional<Trainer> result = trainerDao.findByUsername("trainer1");
 
-        assertTrue(result.isPresent());
-        assertEquals(trainer, result.get());
+        assertThat(result).isPresent().contains(trainer);
     }
 
     @Test
     void testFindByUsername_NotFound() {
-        TypedQuery<Trainer> query = mock(TypedQuery.class);
-        when(entityManager.createQuery(anyString(), eq(Trainer.class))).thenReturn(query);
-        when(query.setParameter(anyString(), any())).thenReturn(query);
-        when(query.getSingleResult()).thenThrow(NoResultException.class);
+        when(entityManager.createQuery(anyString(), eq(Trainer.class))).thenReturn(trainerQuery);
+        when(trainerQuery.setParameter("username", "trainer1")).thenReturn(trainerQuery);
+        when(trainerQuery.getSingleResult()).thenThrow(new NoResultException());
 
-        Optional<Trainer> result = trainerDao.findByUsername("nonExistingUser");
+        Optional<Trainer> result = trainerDao.findByUsername("trainer1");
 
-        assertFalse(result.isPresent());
+        assertThat(result).isEmpty();
     }
 
     @Test
-    void testFindById() {
+    void testFindById_Found() {
+        Trainer trainer = createTrainer("trainer1");
         when(entityManager.find(Trainer.class, 1L)).thenReturn(trainer);
 
         Optional<Trainer> result = trainerDao.findById(1L);
 
-        assertTrue(result.isPresent());
-        assertEquals(trainer, result.get());
+        assertThat(result).isPresent().contains(trainer);
     }
 
     @Test
     void testFindById_NotFound() {
-        when(entityManager.find(Trainer.class, 2L)).thenReturn(null);
+        when(entityManager.find(Trainer.class, 1L)).thenReturn(null);
 
-        Optional<Trainer> result = trainerDao.findById(2L);
+        Optional<Trainer> result = trainerDao.findById(1L);
 
-        assertFalse(result.isPresent());
+        assertThat(result).isEmpty();
     }
 
     @Test
     void testUpdate() {
+        Trainer trainer = createTrainer("trainer1");
+
         trainerDao.update(trainer);
 
         verify(entityManager, times(1)).merge(trainer);
@@ -114,26 +114,27 @@ public class TrainerDaoTest {
 
     @Test
     void testFindUnassignedTrainersByTraineeUsername() {
-        TypedQuery<Trainer> query = mock(TypedQuery.class);
-        when(entityManager.createQuery(anyString(), eq(Trainer.class))).thenReturn(query);
-        when(query.setParameter(anyString(), any())).thenReturn(query);
-        when(query.getResultList()).thenReturn(Arrays.asList(trainer));
+        when(entityManager.createQuery(anyString(), eq(Trainer.class))).thenReturn(trainerQuery);
+        when(trainerQuery.setParameter("username", "trainee1")).thenReturn(trainerQuery);
+        when(trainerQuery.getResultList()).thenReturn(List.of(createTrainer("trainer1"), createTrainer("trainer2")));
 
-        List<Trainer> trainers = trainerDao.findUnassignedTrainersByTraineeUsername("testUser");
+        List<Trainer> trainers = trainerDao.findUnassignedTrainersByTraineeUsername("trainee1");
 
-        assertEquals(1, trainers.size());
-        assertEquals(trainer, trainers.get(0));
+        assertThat(trainers).hasSize(2);
+        verify(entityManager, times(1)).createQuery(anyString(), eq(Trainer.class));
+        verify(trainerQuery, times(1)).setParameter("username", "trainee1");
+        verify(trainerQuery, times(1)).getResultList();
     }
 
     @Test
     void testFindAll() {
-        TypedQuery<Trainer> query = mock(TypedQuery.class);
-        when(entityManager.createQuery(anyString(), eq(Trainer.class))).thenReturn(query);
-        when(query.getResultList()).thenReturn(Arrays.asList(trainer));
+        when(entityManager.createQuery(anyString(), eq(Trainer.class))).thenReturn(trainerQuery);
+        when(trainerQuery.getResultList()).thenReturn(List.of(createTrainer("trainer1"), createTrainer("trainer2")));
 
         List<Trainer> trainers = trainerDao.findAll();
 
-        assertEquals(1, trainers.size());
-        assertEquals(trainer, trainers.get(0));
+        assertThat(trainers).hasSize(2);
+        verify(entityManager, times(1)).createQuery(anyString(), eq(Trainer.class));
+        verify(trainerQuery, times(1)).getResultList();
     }
 }
